testsuite/gsksl/errors/returning-value-from-void.glsl
void
foo ()
{
  return 42;
}

void
main  ()
{
  foo();
}
